Kubernetes_Manifest/myapp2_dep.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: myapp2
  name: myapp2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: myapp2
  strategy: {}
  template:
    metadata:
      labels:
        app: myapp2
    spec:
      containers:
      - image: httpd
        name: httpd
        resources:
          requests:
            cpu: "100m"
          limits:
            cpu: "500m"
status: {}
