Kubernetes_Manifest/myapp1_svc.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: myapp1
  name: myapp1-svc
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 5000
  selector:
    app: myapp1
status:
  loadBalancer: {}
