Kubernetes_Manifest/myapp2_svc.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: myapp2
  name: myapp2-svc
spec:
  ports:
  - port: 82
    protocol: TCP
    targetPort: 80
  selector:
    app: myapp2
status:
  loadBalancer: {}
